--- a/sputnics/scss/layout/_content.scss
+++ b/sputnics/scss/layout/_content.scss
@@ -204,6 +204,24 @@ h3{
 	&__cont{
 		text-align: center;
 	}
+	&_tr{
+		background: transparent;
+		display: block;
+		margin: 0 auto;
+		width: 260px;
+	}
+	&__buy{
+		font: 16px GR;
+		color: #fff;
+		width: 132px;
+		height: 52px;
+		background: #d06a66;
+		border: 0;
+		transition: 0.2s ease;
+		&:hover{
+			background: #2b2b2b;
+		}
+	}
 }
 .about{
 	background: #fff;
@@ -371,10 +389,733 @@ h3{
 		}
 	}
 }
+/*News*/
+.pagebanner{
+	padding: 95px 0;
+	background: url(../img/news-bg.jpg) center center no-repeat;
+	background-size: cover;
+}
+.breadcrumbs{
+	margin-bottom: 15px;
+	a{
+		color: #9b9b9b;
+		font: 13px/30px GR;
+		cursor: pointer;
+		&:hover:not(.sep){
+			color: #fff;
+			text-decoration: underline;
+		}
+		&.sep{
+			padding: 0 3px;
+		}
+	}
+}
+.pagetitle{
+	color: #fff;
+	font: 36px GB;
+	text-transform: uppercase;
+}
+.pagecont{
+	background: #f3f3f3;
+	padding: 30px 0 65px;
+}
+.news{
+	&__item{
+		&_2{
+			margin-bottom: 30px;
+		}
+	}
+}
+/*Product*/
+.product{
+	&__cont{
+		&.flex{
+			align-items: flex-start;
+		}
+	}
+	&__left{
+		width: 455px;
+	}
+	&__right{
+		width: 655px;
+	}
+	&__info{
+		padding: 25px 30px;
+		background: #fff;
+		margin-bottom: 30px;
+		h2{
+			font: 24px GB;
+			color: #000;
+			margin-bottom: 20px;
+		}
+	}
+	&__article{
+		p{
+			font: 17px GR;
+			color: #272727;
+			span{
+				color: #8e8e8e;
+			}
+		}		
+	}
+	&__price{
+		font: 24px/50px GM;
+		color: #000;
+	}
+	&__butts{
+		&.flex{
+			justify-content: flex-end;
+		}
+	}
+	&__amount{
+		border: 1px solid #e6e6e6;
+		width: 132px;
+		margin-right: 30px;
+		&.flex{
+			justify-content: center;
+		}
+		span{
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 42px;
+			height: 50px;
+			background: #f3f3f3;
+			color: #282828;
+			font: 16px GR;
+			cursor: pointer;
+			user-select: none;
+			&.minus{
+				border-right: 1px solid #e6e6e6;
+				padding-bottom: 16px;
+			}
+			&.plus{
+				border-left: 1px solid #e6e6e6;
+			}
+		}
+		input{
+			color: #282828;
+			font: 16px GR;
+			height: 50px;
+			width: 46px;
+			border: 0;
+			padding: 0 10px;
+			text-align: center;
+		}
+	}
+	&__tabs{
+		border-bottom: 1px solid #f3f3f3;
+	}
+	&__tab{
+		background: #fff;
+		height: 50px;
+		cursor: pointer;
+		&.flex{
+			justify-content: center;
+		}
+		span{
+			color: #313131;
+			font: 17px GR;
+		}
+		&_active{
+			background: #a9a9a9;
+			span{
+				color: #fff;
+			}
+		}
+		&_1{
+			width: 210px;
+			border-right: 1px solid #f3f3f3;
+		}
+		&_2{
+			width: 250px;
+		}
+		&_3{
+			width: 195px;
+			border-left: 1px solid #f3f3f3;
+		}
+	}
+	&__item{
+		height: 250px;
+		width: 100%;
+		padding: 20px 30px;
+		background: #fff;
+		p{
+			font: 15px/24px GR;
+			color: #656565;
+			margin-bottom: 25px;
+			&:last-child{
+				margin-bottom: 0;
+			}
+		}
+	}
+	&__row{
+		border-bottom: 2px dotted #656565;
+		padding-top: 14px;
+    	margin-bottom: 14px;
+		p{
+			margin-bottom: 0;
+			line-height: 6px;
+			box-shadow: 0 0 0 5px #fff;
+		}
+	}
+	&__doc{
+		cursor: pointer;
+		margin-bottom: 13px;
+		&.flex{
+			justify-content: flex-start;
+		}
+		&:hover{
+			a{
+				color: #d06a66;
+				text-decoration: underline;
+			}
+			img{
+				filter: none;
+			}
+		}
+		img{
+			filter: grayscale(100%);
+			margin-right: 15px;
+		}
+		a{
+			color: #656565;
+			font: 15px GR;
+			&:hover{
+				
+			}
+		}
+	}
+}
+.similar{
+	width: 100%;
+	&__title{
+		font: 24px/60px GB;
+		color: #000000;
+		margin: 25px 0;
+	}
+	&__cont{
+		width: 100%;
+	}
+	&__item{
+		width: 260px;
+		&:hover{
+			.similar{
+				&__buy{
+					transform: translateY(0);
+					opacity: 1;
+				}
+			}
+		}
+	}
+	&__img{
+		width: 100%;
+		height: 230px;
+		border-bottom: 4px solid #f3f3f3;
+		background: #fff;
+		overflow: hidden;
+		&.flex{
+			justify-content: center;
+		}
+	}
+	&__info{
+		background: #fff;
+		padding: 17px 25px;
+		border-bottom: 4px solid #f3f3f3;
+		h2{
+			font: 16px/24px GR;
+			color: #000;
+		}
+		p{
+			font: 14px/30px GR;
+			color: #7d7d7d;
+		}
+		span{
+			font: 18px/30px GM;
+			color: #000;
+		}
+	}
+	&__buy{
+		width: 100%;
+		opacity: 0;
+		transform: translateY(-52px);
+		transition: all 0.4s ease;
+	}
+}
+/*Products page*/
+.products2{
+	&.flex{
+		align-items: flex-start;
+	}
+}
+.sidebar{
+	width: 260px;
+	background: #fff;
+	padding: 30px;
+	&__box{
+		border-bottom: 1px solid #e5e5e6;
+		padding: 20px 0;
+		&:first-child{
+			padding-top: 0;
+		}
+		&:last-child{
+			border-bottom: 0;
+		}
+	}
+	&__title{
+		color: #313131;
+		font: 18px/30px GM;
+		margin-bottom: 10px;
+	}
 
-
-
-
+}
+.checkbox{
+	display: none;
+}
+.checkboxlabel{
+	display: inline-block;
+    cursor: pointer;
+    position: relative;
+    padding: 0 0 0 35px;
+    font: 16px/36px GR;
+    color: #656565;
+    &::before{
+    	content: "";
+	    display: inline-block;
+	    width: 18px;
+	    height: 18px;
+	    background: #fff;
+	    border: 1px solid #e5e5e6;
+	    margin-right: 17px;
+	    position: absolute;
+	    left: 0;
+	    top: 8px;
+    }
+}
+.checkbox:checked + .checkboxlabel{
+	color: #d06a66;
+}
+.checkbox:checked + .checkboxlabel:before{
+	content: url(../img/check.png);
+    border: 1px solid #d06a66;
+    background: #d06a66;
+    text-align: center;
+    line-height: 11px;
+}
+.main{
+	width: 850px;
+	&.flex{
+		align-items: flex-start;
+	}
+	.btn{
+		width: 260px;
+		display: block;
+		margin: 60px auto;
+		background: transparent;
+		&:hover{
+			background: #ec6a66;
+		}
+	}
+	&__desc{
+		background: #fff;
+		padding: 47px 55px;
+		h2{
+			font: 36px GB;
+			color: #000;
+			margin-bottom: 30px;
+		}
+		p{
+			font: 16px/24px GR;
+			color: #8e8e8e;
+			margin-bottom: 25px;
+			&:last-child{
+				margin-bottom: 0;
+			}
+		}
+	}
+}
+.goods{
+	width: 260px;
+	margin-bottom: 30px;
+	position: relative;
+	padding-bottom: 140px;
+	&__img{
+		width: 100%;
+    	height: 230px;
+    	border-bottom: 4px solid #f3f3f3;
+    	background: #fff;
+    	transition: all 0.2s ease;
+    	&.flex{
+    		justify-content: center;
+    	}
+	}
+	&__info{
+	    background: #fff;
+    	padding: 17px 25px;
+    	height: 140px;
+    	overflow: hidden;
+    	transition: all 0.2s ease;
+    	cursor: pointer;
+    	position: absolute;
+    	z-index: 2;
+    	h2{
+			font: 16px/24px GR;
+    		color: #000;
+    	}
+    	p{
+			font: 14px/30px GR;
+    		color: #7d7d7d;
+    	}
+    	span{
+        	font: 18px/30px GM;
+    		color: #000;		
+    	}
+	}
+	&__buy{
+		width: 100%;
+    	margin-top: 15px;
+	}
+	&:hover{
+		.goods__img{
+			box-shadow: 0px 0px 15px 0px rgba(36, 39, 41, 0.15);
+		}
+		.goods__info{
+			box-shadow: 0px 0px 15px 0px rgba(36, 39, 41, 0.15);
+			height: 210px;
+		}
+	}
+}
+.matrix{
+	&__row{
+		width: 100%;
+		margin-bottom: 35px;
+	}
+	&__item{
+		width: 260px;
+		&_1{
+			margin-right: 30px;
+		}
+	}
+	&__img{
+		width: 100%;
+		height: 232px;
+		border-bottom: 4px solid #f3f3f3;
+		overflow: hidden;
+		background: #fff;
+		&_1{
+			img{
+				height: 100%;
+			}
+		}
+		&.flex{
+			justify-content: center;
+		}
+	}
+	&__title{
+		background: #fff;
+		text-align: center;
+		font: 18px GM;
+		color: #000;
+		padding: 18px 0;
+		&_2{
+			font: 16px GR;
+			padding: 19.5px 0;
+		}
+	}
+	&__slider{
+		width: 850px;
+		.next,.prev{
+			position: absolute;
+			width: 38px;
+			height: 38px;
+			background: #fff;
+			border-radius: 100%;
+			border: 0;
+			top: 50%;
+			margin-top: -19px;
+			z-index: 5;
+			display: flex;
+    		justify-content: center;
+    		align-items: center;
+			box-shadow: 0px 0px 10px 0px rgba(36, 39, 41, 0.1);
+		}
+		.next{
+			right: -19px;
+			img{
+				transform: rotate(180deg);
+			}
+		}
+		.prev{
+			left: -19px;
+		}
+		.slick-list{
+			margin: 0 -17px;
+		}
+		.slick-slide{
+			margin: 0 17px;
+		}
+	}
+	.btn{
+		width: 260px;
+    	display: block;
+    	margin: 0 auto;
+    	margin-top: 60px;
+    	background: transparent;
+    	&:hover{
+    		background: #ec6a66;
+    	}
+	}
+}
+/*Config*/
+.compl{
+	&__title{
+		margin-top: 0;
+	}
+}
+.config{
+	&__title{
+		margin: 30px 0;
+		padding: 20px 30px;
+		background: #fff;
+		h2{
+			font: 24px GM;
+			color: #000;
+		}
+		&_active{
+			img{
+				transform: rotate(180deg);
+			}
+		}
+	}
+	&__cont{
+		margin-bottom: 30px;
+		&.flex{
+			align-items: stretch;
+		}
+	}
+	&__left{
+		width: 552px;
+		background: #fff;
+		padding: 30px;
+		&_2{
+			padding: 15px 0;
+			&.flex{
+				justify-content: center;
+			}
+		}
+		&_3{
+			padding: 0;
+			img{
+				width: 100%;
+			}
+		}
+	}
+	&__checkbox{
+		width: 100%;
+	}
+	&__radios{
+		border-bottom: 1px solid #e6e6e6;
+		padding-bottom: 15px;
+	}
+	&__text{
+		padding-top: 15px;
+	}
+	&__desc{
+		color: #a09f9f;
+		font: 15px/30px GR;
+		margin-bottom: 12px;
+	}
+	&__gr{
+		color: #373737;
+		font: 15px/30px GR;
+		margin-bottom: 10px;
+		span{
+			color: #d06a66;
+		}
+	}
+	&__bl{
+		color: #000;
+		font: 15px/30px GR;
+	}
+	&__amount{
+		margin-bottom: 10px;
+		&.flex{
+			justify-content: flex-start;
+		}
+		p{
+			margin-right: 30px;
+		}
+		input{
+			background: #fff;
+			width: 65px;
+			height: 32px;
+			border: 1px solid #e6e6e6;
+			color: #383838;
+			font: 15px/30px GR;
+			text-align: center;
+			padding: 0 15px;
+			&::placeholder{
+				color: #383838;
+				font: 15px/30px GR;
+			}
+		}
+	}
+	&__right{
+		width: 552px;
+	}
+	&__img{
+		width: 100%;
+		height: 355px;
+		background: #fff;
+		margin-bottom: 30px;
+		&.flex{
+			justify-content: center;
+		}
+	}
+	&__minititle{
+		height: 52px;
+		width: 100%;
+		background: #fff;
+		padding: 0 25px;
+		margin-bottom: 30px;
+		h2{
+			color: #000;
+			font: 21px GM;
+		}
+		span{
+			color: #000;
+			font: 21px GM;
+		}
+	}
+	&__butts{
+		.btn__buy{
+			width: 260px;
+			&_grey{
+				background: #989898;
+				&:hover{
+					background: #d06a66;
+				}
+			}
+		}
+	}
+	&__params{
+		width: 552px;
+		background: #fff;
+		padding: 30px 30px 0;
+		h2{
+			font: 24px/60px GB;
+			color: #000;
+			&.title{
+				line-height: 34px;
+				margin-bottom: 25px;
+			}
+		}
+	}
+	&__row{
+		padding-top: 19px;
+		&:last-child{
+			margin-bottom: 0;
+		}
+		p{
+			font: 15px GR;
+			color: #656565;
+			line-height: 6px;
+		}
+	}
+	&__text2{
+		p{
+			font: 15px/24px GR;
+    		color: #656565;
+    		margin-bottom: 20px;
+    		&:last-child{
+    			margin-bottom: 0;
+    		}
+		}
+	}
+}
+.configcheck{
+	display: none;
+}
+.configlabel{
+	display: inline-block;
+    cursor: pointer;
+    position: relative;
+    padding: 0 0 0 85px;
+    font: 18px/60px GR;
+    color: #000;
+    user-select: none;
+    &::before{
+    	content: "";
+    	width: 64px;
+    	height: 32px;
+    	position: absolute;
+    	top: 50%;
+    	margin-top: -16px;
+    	left: 0;
+    	background: #e6e6e6;
+    	border-radius: 20px;
+    	box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.1) inset;
+    	transition: all 0.2s ease;
+    }
+    &::after{
+    	content: "";
+    	width: 28px;
+    	height: 28px;
+    	position: absolute;
+    	top: 50%;
+    	left: 2px;
+    	margin-top: -14px;
+    	background: #fff;
+    	border-radius: 100%;
+    	transition: all 0.2s ease;
+    }
+}
+.configcheck:checked + .configlabel::before{
+	background: #d06a66;
+}
+.configcheck:checked + .configlabel::after{
+	left: 34px;
+}
+.radio{
+	display: none;
+}
+.radiolabel{
+	font: 14px/36px GR;
+	color: #8c8c8c;
+	display: inline-block;
+    cursor: pointer;
+    position: relative;
+    padding: 0 0 0 35px;
+    user-select: none;
+    &::before{
+    	content: "";
+    	width: 22px;
+    	height: 22px;
+    	position: absolute;
+    	top: 50%;
+    	margin-top: -11px;
+    	left: 0;
+    	background: #e6e6e6;
+    	border-radius: 100%;
+    	box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.1) inset;
+    }
+    &::after{
+    	content: "";
+    	opacity: 0;
+    	width: 12px;
+    	height: 12px;
+    	position: absolute;
+    	top: 50%;
+    	margin-top: -6px;
+    	left: 5px;
+    	background: #d06a66;
+    	border-radius: 100%;
+    	transition: opacity 0.2s ease;
+    }
+}
+.radio:checked + .radiolabel::after{
+	opacity: 1;
+}
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
     body{min-height: 100hv; width: 100%; display: flex; flex-direction: column;}
@@ -437,6 +1178,11 @@ h3{
 		&__date{
 			font: 13px/30px GR;
 		}
+		&__cont{
+			&_2{
+				margin-bottom: 15px;
+			}
+		}
 	}
 	.contactus{
 		padding: 70px 0;
@@ -455,6 +1201,92 @@ h3{
 			input[type="text"], input[type="submit"]{
 				width: 310px;
     			height: 60px;
+			}
+		}
+	}
+	/*Product*/
+	.product{
+		&__right{
+			width: 500px;
+		}
+		&__tab{
+			&_1{
+				width: 155px;
+			}
+			&_2{
+				width: 170px;
+			}
+			&_3{
+				width: 175px;
+			}
+		}
+		&__item{
+			height: auto;;
+		}
+	}
+	.similar{
+		&__item{
+			width: 230px;
+		}
+	}
+	/*Products*/
+	.goods{
+		width: 230px;
+		&__img{
+			overflow: hidden;
+		}
+	}
+	.sidebar{
+		width: 230px;
+		padding: 15px;
+	}
+	.main{
+		width: 730px;
+		.btn{
+			width: 215px;
+			margin: 30px auto;
+		}
+		&__desc{
+			padding: 30px 35px;
+		}
+	}
+	/*Matrix*/
+	.matrix{
+		&__item{
+			width: 210px;
+		}
+		&__slider{
+			width: 730px;
+		}
+	}
+	/*Config page*/
+	.config{
+		&__left{
+			width: 510px;
+			&_3{
+				img{
+					height: 100%;
+					width: auto;
+				}
+			}
+		}
+		&__right{
+			width: 430px;
+		}
+		&__butts{
+			.btn__buy{
+				width: 210px;
+			}
+		}
+		&__params{
+			width: 430px;
+			padding-bottom: 25px;
+		}
+		&__text2{
+			p{
+				font: 13px/22px GR;
+				margin-bottom: 10px;
+
 			}
 		}
 	}
@@ -553,6 +1385,11 @@ h3{
 		&__date{
 			font: 12px/30px GR;
 		}
+		&__cont{
+			&_2{
+				margin-bottom: 0;
+			}
+		}
 	}
 	.contactus{
 		padding: 40px 0;
@@ -580,6 +1417,75 @@ h3{
 		}
 		&__font{
 			width: 480px;
+		}
+	}
+	/*News*/
+	.pagecont{
+		padding-bottom: 30px;
+	}
+	/*Product*/
+	.product{
+		&__cont{
+			&.flex{
+				justify-content: space-around;
+			}
+		}
+		&__left{
+			margin-bottom: 30px;
+		}
+	}
+	.similar{
+		&__cont{
+		    justify-content: space-around;
+		}
+	}
+	/*Products*/
+	.goods{
+		width: 230px;
+		&__img{
+			overflow: hidden;
+		}
+	}
+	.sidebar{
+		width: 230px;
+		padding: 15px;
+	}
+	.main{
+		width: 500px;
+		.btn{
+			width: 215px;
+			margin: 30px auto;
+		}
+		&__desc{
+			padding: 30px 35px;
+		}
+	}
+	/*Matrix*/
+	.matrix{
+		&__item{
+			width: 230px;
+		}
+		&__slider{
+			width: 490px;
+		}
+	}
+	/*Config*/
+	.config{
+		&__similar{
+			margin-bottom: 20px;
+		}
+		&__cont{
+			&.flex{
+				justify-content: space-around;
+			}
+		}
+		&__left{
+			width: 100%;
+			margin-bottom: 30px;
+		}
+		&__params{
+			width: 100%;
+			padding-bottom: 30px;
 		}
 	}
 }
@@ -651,6 +1557,9 @@ h3{
 			&.flex{
 				justify-content: space-around;
 			}
+			&_2{
+				margin-bottom: 15px;
+			}
 		}
 		&__item{
 			width: 310px;
@@ -712,6 +1621,136 @@ h3{
     			}
 			}
 		}
+	}
+	/*News*/
+	.pagecont{
+		padding-bottom: 30px;
+	}
+	/*Product*/
+	.product{
+		&__cont{
+			&.flex{
+				justify-content: space-around;
+			}
+		}
+		&__left{
+			width: 100%;
+    		max-width: 455px;
+    		margin-bottom: 30px;
+    		display: flex;
+    		justify-content: space-around;
+    		align-items: flex-start;
+    		flex-wrap: wrap;
+		}
+		&__info{
+			padding: 15px;
+		}
+		&__amount{
+			margin-right: 10px;
+		}
+		&__tab{
+			&_1{
+				width: 25%;
+			}
+			&_2{
+				width: 40%;
+			}
+			&_3{
+				width: 35%;
+			}
+			span{
+				font-size: 13px;
+			}
+		}
+		&__item{
+			height: auto;
+		}
+	}
+	.similar{
+		&__cont{
+			&.flex{
+				justify-content: space-around;
+			}
+		}
+		&__title{
+			line-height: 35px;
+		}
+	}
+	/*Products*/
+	.sidebar{
+		width: 100%;
+		margin-bottom: 30px;
+	}
+	.main{
+		width: 100%;
+		&.flex{
+			justify-content: space-around;
+		}
+		&__desc{
+			padding: 25px;
+		}
+	}
+	/*Matrix*/
+	.matrix{
+		&__row{
+			&.flex{
+				justify-content: space-around;
+				align-items: flex-start;
+			}
+		}
+		&__item{
+			margin-right: 0;
+			margin-bottom: 20px;
+		}
+		&__slider{
+			width: 260px;
+		}
+	}
+	/*Config*/
+	.config{
+		&__similar{
+			margin-bottom: 20px;
+		}
+		&__cont{
+			&.flex{
+				justify-content: space-around;
+			}
+		}
+		&__left{
+			width: 100%;
+			margin-bottom: 30px;
+			overflow: hidden;
+		}
+		&__right{
+		    width: 100%;
+		    overflow: hidden;
+		}
+		&__params{
+			width: 100%;
+			padding: 20px;
+			h2{
+				line-height: 35px;
+			}
+		}
+		&__butts{
+			.btn__buy{
+				width: 100%;
+    			margin-bottom: 5px;
+			}
+		}
+		&__title{
+			position: relative;
+			img{
+				position: absolute;
+				top: 50%;
+				margin-top: -3.5px;
+				right: 30px;
+			}
+		}
+	}
+	.configlabel{
+		padding: 0 0 0 75px;
+    	font: 16px/60px GR;
 	}
 }
 
