--- a/bitlab/css/style.css
+++ b/bitlab/css/style.css
@@ -176,14 +176,14 @@ header {
 .header__nav ul li a {
   font: 1.1458333333333333VW RL;
   color: #2c2a2b;
-  padding: 5px 0;
+  /*padding: 23% 0;*/
   position: relative;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
 }
 .header__nav ul li a::after {
   content: "";
   position: absolute;
-  bottom: 0;
+  bottom: -107%;
   left: 0;
   width: 100%;
   height: 2px;
@@ -193,6 +193,9 @@ header {
   -ms-transform: scale(0.4, 1);
   transform: scale(0.4, 1);
   opacity: 0;
+}
+.header__nav ul li a:hover {
+  color: #dc1837;
 }
 .header__nav ul li a:hover::after {
   -webkit-transform: scale(1, 1);
@@ -582,6 +585,21 @@ footer {
   background: #979798;
   margin-right: 30px;
   transition: all 0.3s ease;
+  /*&:first-child{
+  	&:hover{
+  		background: #0a6c85;
+  	}
+  }
+  &:nth-child(2){
+  	&:hover{
+  		background: #8c07d1;
+  	}
+  }
+  &:last-child{
+  	&:hover{
+  		background: #0f5ba3;
+  	}
+  }*/
 }
 .socials a img {
   transition: all 0.3s ease;
@@ -589,14 +607,11 @@ footer {
 .socials a.flex {
   justify-content: center;
 }
-.socials a:first-child:hover {
-  background: #0a6c85;
+.socials a:hover {
+  background: #fff;
 }
-.socials a:nth-child(2):hover {
-  background: #8c07d1;
-}
-.socials a:last-child:hover {
-  background: #0f5ba3;
+.socials a:hover img {
+  filter: grayscale(1) invert(1);
 }
 
 @media screen and (min-width: 992px) and (max-width: 1200px) {
@@ -922,6 +937,7 @@ body {
   width: 54.947917%;
   top: 53.571429%;
   right: 20.989583%;
+  z-index: 5;
 }
 
 .mouse {
@@ -1050,7 +1066,7 @@ body {
   margin: 0;
 }
 .team__slider2 .slick-next {
-  right: -17px;
+  right: -19px;
   transform: rotate(180deg);
 }
 .team__slider2 .slick-next img {
@@ -1066,7 +1082,7 @@ body {
 .team__member {
   width: 360px;
   margin: 0 15px !important;
-  border: 1px solid #bdbdbd;
+  /*border: 1px solid #bdbdbd;*/
 }
 .team__member_2 .team__memberimg img {
   margin-left: -75px;
@@ -1121,7 +1137,7 @@ body {
   /*border: 1px solid #bdbdbd;*/
   background-repeat: no-repeat;
   background-position: 107% bottom;
-  cursor: pointer;
+  /*cursor: pointer;*/
 }
 .team__item.flex {
   justify-content: center;
@@ -1137,6 +1153,38 @@ body {
   font: 20px RL;
   color: #2c2a2b;
   text-align: center;
+}
+
+.originalimg {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.5) inset;
+  z-index: 9999;
+  display: none;
+  opacity: 0;
+  transition: all 0.3s ease;
+}
+.originalimg__close {
+  position: absolute;
+  right: 30px;
+  top: 15px;
+  transform: rotate(45deg);
+  color: #fff;
+  font: 60px RL;
+  cursor: pointer;
+}
+.originalimg img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.originalimg_active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 1;
 }
 
 .spincrement1::after {
@@ -1638,7 +1686,7 @@ body {
   background: #dc1837;
 }
 .portfolio__items {
-  display: flex !important;
+  display: flex;
 }
 .portfolio__slider .slick-next, .portfolio__slider .slick-prev {
   background: none;
@@ -1667,6 +1715,10 @@ body {
   margin-bottom: 6px;
   transition: all 0.1s ease;
   background-color: #000;
+  display: none;
+}
+.portfolio__item_show {
+  display: block;
 }
 .portfolio__item:hover {
   /*-webkit-transform: scale(0.8);
@@ -1714,14 +1766,14 @@ body {
   font: 16px/25px RL;
 }
 .portfolio__link {
-  color: #fff;
-  font: 16px/25px RL;
-  text-decoration: underline;
   position: absolute;
   z-index: 2;
   left: 150px;
-  bottom: 13px;
+  bottom: 11px;
   opacity: 0;
+}
+.portfolio__link img {
+  filter: none !important;
 }
 .portfolio__name {
   font: 17.75px GR;
@@ -1756,6 +1808,36 @@ body {
 }
 .portfolio__tags span.active {
   background: #dc1837;
+}
+
+.show-more {
+  font: 19px/30px RL;
+  color: #fff;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
+  width: 231px;
+  height: 67px;
+  display: block;
+  background: #dc1837;
+  border: 0;
+  margin: 25px auto;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
+.show-more::before {
+  content: "";
+  box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.1) inset;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 400px;
+  height: 70px;
+  transform: translateX(-400px);
+  transition: transform 0.4s ease;
+}
+.show-more:hover::before {
+  transform: translateX(0);
 }
 
 .comments {
@@ -1827,9 +1909,11 @@ body {
   height: 400px;
   background: #fff;
   position: relative;
+  display: flex !important;
 }
 .comments__video video {
-  width: 100%;
+  /*width: 100%;*/
+  object-fit: fill;
   height: auto;
   position: relative;
 }
@@ -1906,8 +1990,9 @@ body {
   align-items: center;
   position: absolute;
   bottom: -37px;
-  left: 50%;
-  margin-left: -37.5px;
+  left: 0;
+  width: 100%;
+  margin-left: 0;
 }
 .comments .slick-dots li {
   padding: 0;
@@ -1928,6 +2013,18 @@ body {
   border: 1px solid #312f30;
   background: #2c2a2b;
 }
+.comments__videos .slick-prev {
+  left: 170px;
+}
+.comments__videos .slick-next {
+  right: 170px;
+}
+.comments__slider .slick-prev {
+  left: 45px;
+}
+.comments__slider .slick-next {
+  right: 45px;
+}
 
 .comment {
   border: 1px solid #dedede;
@@ -1938,9 +2035,20 @@ body {
 }
 .comment__top {
   margin-bottom: 35px;
+  position: relative;
 }
 .comment__top.flex {
   justify-content: flex-start;
+}
+.comment__top::after {
+  content: "";
+  position: absolute;
+  width: 55px;
+  height: 46px;
+  background: url(../img/quote.png) center center no-repeat;
+  top: 50%;
+  margin-top: -23px;
+  right: 35px;
 }
 .comment__img {
   width: 135px;
@@ -2242,7 +2350,7 @@ body {
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   body {
-    min-height: 100hv;
+    min-height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
