--- a/bitlab/scss/layout/_header.scss
+++ b/bitlab/scss/layout/_header.scss
@@ -27,13 +27,13 @@ header{
 				a{
 					font: 1.1458333333333333VW RL;
 					color: #2c2a2b;
-    				padding: 5px 0;
+    				/*padding: 23% 0;*/
     				position: relative;
-    				text-transform: uppercase;
+    				/*text-transform: uppercase;*/
     				&::after{
     					content: "";
     					position: absolute;
-					    bottom: 0;
+					    bottom: -107%;
 					    left: 0;
 					    width: 100%;
 					    height: 2px;
@@ -45,6 +45,7 @@ header{
 					    opacity: 0;
     				}
     				&:hover{
+    					color: #dc1837;
     					&::after{
     						-webkit-transform: scale(1, 1);
 						    -ms-transform: scale(1, 1);
