--- a/sputnics/css/style.css
+++ b/sputnics/css/style.css
@@ -721,6 +721,9 @@ h3 {
 .news__cont {
   margin-bottom: 45px;
 }
+.news__cont.flex {
+  align-items: stretch;
+}
 .news__item {
   width: 358px;
   cursor: pointer;
@@ -774,7 +777,8 @@ h3 {
   font: 16px/30px GM;
   color: #000;
   margin-bottom: 20px;
-  display: block;
+  display: inline-block;
+  vertical-align: middle;
 }
 .news__text {
   font: 15px/30px GR;
@@ -1262,27 +1266,30 @@ h3 {
 }
 .matrix__slider .next, .matrix__slider .prev {
   position: absolute;
-  width: 38px;
-  height: 38px;
-  background: #fff;
+  width: 57px;
+  height: 57px;
+  /*background: #fff;
   border-radius: 100%;
+  */
   border: 0;
+  background: none;
   top: 50%;
-  margin-top: -19px;
+  margin-top: -28.5px;
   z-index: 5;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0px 0px 10px 0px rgba(36, 39, 41, 0.1);
+  padding: 0;
+  			/*display: flex;
+      		justify-content: center;
+      		align-items: center;*/
+  /*box-shadow: 0px 0px 10px 0px rgba(36, 39, 41, 0.1);*/
 }
 .matrix__slider .next {
-  right: -19px;
+  right: -29px;
 }
 .matrix__slider .next img {
   transform: rotate(180deg);
 }
 .matrix__slider .prev {
-  left: -19px;
+  left: -28px;
 }
 .matrix__slider .slick-list {
   margin: 0 -17px;
