--- a/sputnics/scss/layout/_content.scss
+++ b/sputnics/scss/layout/_content.scss
@@ -263,6 +263,9 @@ h3{
 	}
 	&__cont{
 		margin-bottom: 45px;
+		&.flex{
+			align-items: stretch;
+		}
 	}
 	&__item{
 		width: 358px;
@@ -319,7 +322,8 @@ h3{
 		font: 16px/30px GM;
 		color: #000;
 		margin-bottom: 20px;
-		display: block;
+		display: inline-block;
+    	vertical-align: middle;
 	}
 	&__text{
 		font: 15px/30px GR;
@@ -826,27 +830,30 @@ h3{
 		width: 850px;
 		.next,.prev{
 			position: absolute;
-			width: 38px;
-			height: 38px;
-			background: #fff;
+			width: 57px;
+			height: 57px;
+			/*background: #fff;
 			border-radius: 100%;
+			*/
 			border: 0;
+			background: none;
 			top: 50%;
-			margin-top: -19px;
+			margin-top: -28.5px;
 			z-index: 5;
-			display: flex;
+			padding: 0;
+			/*display: flex;
     		justify-content: center;
-    		align-items: center;
-			box-shadow: 0px 0px 10px 0px rgba(36, 39, 41, 0.1);
+    		align-items: center;*/
+			/*box-shadow: 0px 0px 10px 0px rgba(36, 39, 41, 0.1);*/
 		}
 		.next{
-			right: -19px;
+			right: -29px;
 			img{
 				transform: rotate(180deg);
 			}
 		}
 		.prev{
-			left: -19px;
+			left: -28px;
 		}
 		.slick-list{
 			margin: 0 -17px;
