--- a/bitlab/scss/layout/_header.scss
+++ b/bitlab/scss/layout/_header.scss
@@ -33,10 +33,10 @@ header{
     				&::after{
     					content: "";
     					position: absolute;
-					    bottom: -107%;
+					    bottom: -114%;
 					    left: 0;
 					    width: 100%;
-					    height: 2px;
+					    height: 20%;
 					    background: #dc1837;
 					    transition: 0.4s ease-in-out;
 					    -webkit-transform: scale(0.4, 1);
