--- a/bitlab/css/style.css
+++ b/bitlab/css/style.css
@@ -2237,19 +2237,30 @@ body {
 
 /*Modal*/
 .modal-form {
-  display: none;
+  /*display: none;*/
   width: 100%;
   height: 100vh;
   padding: 30px 0 90px;
   position: fixed;
   /*margin-left: -600px;*/
-  top: 0%;
+  box-shadow: 0 0 0 9999px rgba(255, 255, 255, 0.3) inset;
   /*left: 50%;*/
   background-color: #1d1d1d;
   background-image: url(../img/modal-bg.jpg);
   background-position: center;
   background-size: cover;
   z-index: 9999;
+  -webkit-transform-origin: 50% 0;
+  transform-origin: 50% 0;
+  -webkit-perspective-origin: 50% 100%;
+  perspective-origin: 50% 100%;
+  -webkit-transition: -webkit-transform .3s ease;
+  top: 0;
+  -webkit-transform: perspective(900px) rotateX(-90deg);
+  transform: perspective(900px) rotateX(-90deg);
+  transition: -webkit-transform .3s ease;
+  transition: transform .3s ease;
+  transition: transform .3s ease,-webkit-transform .3s ease;
   /*overflow: hidden;*/
 }
 .modal-form .title_3 {
@@ -2288,8 +2299,7 @@ body {
 .modal_active {
   opacity: 1;
   top: 0;
-  display: block;
-  transition: all 0.3s ease;
+  transform: perspective(900px) rotateX(0);
 }
 
 .modal__main {
